--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "typescript-library",
+  "name": "@dom111/element",
   "version": "0.1.0",
   "description": "TypeScript library/app template including functional and unit tests",
-  "main": "index.js",
+  "main": "dist/Element.js",
   "scripts": {
     "build": "npm run build:prettier:write && npm run build:esbuild",
     "build:esbuild": "node ./esbuild.js",
@@ -10,21 +10,23 @@
     "build:prettier:check": "prettier -c .",
     "build:prettier:write": "prettier -w .",
     "build:watch": "npm run build:esbuild:watch",
-    "test": "npm run test:unit && npm run test:functional",
-    "test:functional": "jest -c jest.config.functional.ts",
-    "test:unit": "jest -c jest.config.unit.ts"
+    "test": "npm run test:unit",
+    "test:unit": "jest -c jest.config.unit.ts",
+    "watch": "npm run build && npm run build:watch"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dom111/typescript-library.git"
+    "url": "git+https://github.com/dom111/element.git"
   },
   "author": "Dom Hastings <dom111@users.noreply.github.com>",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/dom111/typescript-library/issues"
+    "url": "https://github.com/dom111/element/issues"
   },
-  "homepage": "https://github.com/dom111/typescript-library#readme",
-  "dependencies": {},
+  "homepage": "https://github.com/dom111/element#readme",
+  "dependencies": {
+    "css-what": "^6.1.0"
+  },
   "devDependencies": {
     "@types/expect-puppeteer": "^4.4.7",
     "@types/jest": "^27.4.1",
