--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
   "name": "@dom111/element",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "TypeScript library/app template including functional and unit tests",
   "main": "dist/Element.js",
+  "types": "src/Element.ts",
   "scripts": {
-    "build": "npm run build:prettier:write && npm run build:esbuild",
-    "build:esbuild": "node ./esbuild.js",
-    "build:esbuild:watch": "node ./esbuild.js watch",
+    "build": "npm run build:prettier:write && npm run build:tsc && npm run build:terser",
     "build:prettier:check": "prettier -c .",
     "build:prettier:write": "prettier -w .",
-    "build:watch": "npm run build:esbuild:watch",
+    "build:terser": "terser dist/Element.js -m -c --toplevel --source-map \"content=dist/Element.js.map\" -o dist/Element.js",
+    "build:tsc": "tsc",
     "test": "npm run test:unit",
     "test:unit": "jest -c jest.config.unit.ts",
     "watch": "npm run build && npm run build:watch"
@@ -37,7 +37,9 @@
     "jest": "^27.5.1",
     "jest-puppeteer": "^6.1.0",
     "prettier": "^2.5.1",
+    "terser": "^5.15.0",
     "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0"
+    "ts-node": "^10.7.0",
+    "typescript": "^4.8.2"
   }
 }
