--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,12 @@
   "compilerOptions": {
     "esModuleInterop": true,
     "lib": ["dom", "dom.iterable", "es2019"],
+    "module": "commonjs",
     "moduleResolution": "node",
+    "outDir": "./dist",
+    "sourceMap": true,
+    "strict": true,
     "target": "es6"
-  }
+  },
+  "include": ["src/**/*.ts"]
 }
